--- a/package.json
+++ b/package.json
@@ -3,20 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node ./scripts/next.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "add": "^2.0.6",
+    "bcrypt-ts": "^5.0.1",
+    "dotenv": "^16.4.4",
+    "dotenv-webpack": "^8.0.1",
+    "formik": "^2.4.5",
+    "mongoose": "^8.1.2",
+    "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.9",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "yarn": "^1.22.21",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
