--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-MONGO_URI="mongodb+srv://nhatloiit99:DiFEi7rkfWPm7muW@cluster0.hyohqfr.mongodb.net/nextjs_auth_db"
-PORT = 3004
+MONGO_URI= "mongodb+srv://nhatloi2202:KVIj8FFbNnmncd06@cluster0.1efkvah.mongodb.net/shoesdb"
 base_url = ""
 AUTH_SECRET="Dlctr795IZpp9L5j4+Cug2Hs47EpTgqQLdgLmcUOV04="
