--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "./scripts/next.js",
+      "src": "/api/auth/(.*)",
+      "dest": "/api/auth/$1",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "*"
