--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "@vercel/node": "^3.0.19",
     "add": "^2.0.6",
     "bcrypt-ts": "^5.0.1",
     "dotenv": "^16.4.5",
