--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "start": "node ./scripts/next.js",
+    "dev": "node ./scripts/next.js",
     "lint": "next lint"
   },
   "dependencies": {
