--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,10 @@
         "Access-Control-Allow-Origin": "*"
       }
     }
-  ]
+  ],
+  "functions": {
+    "/api/.*": {
+      "maxDuration": 60
+    }
+  }
 }
