--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-  "routes": [
-    {
-      "src": "/api/auth/(.*)",
-      "dest": "/api/auth/$1",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
-    }
-  ]
+  "builds": [{ "src": "package.json", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/$1" }],
+  "version": 2,
+  "scripts": {
+    "build": "yarn build",
+    "postinstall": "yarn build && yarn start"
+  }
 }
