--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "postinstall": "yarn build && yarn start",
     "start": "null",
     "dev": "node ./scripts/next.js",
     "lint": "next lint"
