--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "start": "next",
+    "start": "node ./scripts/next.js",
     "next": "yarn start",
     "dev": "node ./scripts/next.js",
     "lint": "next lint"
