--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "start": "jasndfjdasnkf",
-    "next": "ádfdasfas",
+    "start": "node ./scripts/next.js",
     "dev": "node ./scripts/next.js",
     "lint": "next lint"
   },
