--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI= "mongodb+srv://nhatloi2202:KVIj8FFbNnmncd06@cluster0.1efkvah.mongodb.net/shoesdb"
+MONGODB_URI= "mongodb+srv://vercel-admin-user:mqzjDokC147uqTrf@cluster0.1efkvah.mongodb.net/shoesdb?retryWrites=true&w=majority"
 base_url = "https://nextjs-next-auth-tau.vercel.app"
 AUTH_SECRET="Dlctr795IZpp9L5j4+Cug2Hs47EpTgqQLdgLmcUOV04="
