--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGODB_URI= "mongodb+srv://vercel-admin-user:mqzjDokC147uqTrf@cluster0.1efkvah.mongodb.net/shoesdb?retryWrites=true&w=majority"
-base_url = "https://nextjs-next-auth-tau.vercel.app"
+# Created by Vercel CLI
 AUTH_SECRET="Dlctr795IZpp9L5j4+Cug2Hs47EpTgqQLdgLmcUOV04="
+MONGODB_URI="mongodb+srv://vercel-admin-user:mqzjDokC147uqTrf@cluster0.1efkvah.mongodb.net/shoesdb?retryWrites=true&w=majority"
+PORT="3000"
+VERCEL_URL="https://nextjs-next-auth-tau.vercel.app"
