--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.10",
     "add": "^2.0.6",
     "bcrypt-ts": "^5.0.1",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
